Show rand() logic affecting views

--- a/app/views/_derp-link.erb
+++ b/app/views/_derp-link.erb
@@ -1,2 +1,2 @@
-<li><a class="derp-link" href="http://iluvisis.com">derp-element</a></li>
+<li><a class="derp-link" href="<%= url %>">derp-element</a></li>
 
