--- a/app/views/_derp-link.erb
+++ b/app/views/_derp-link.erb
@@ -1,2 +1,2 @@
-<li><a class="derp-link" href="<%= url %>">derp-element</a></li>
+<li><a class="derp-link" href="<%= rand > 0.5 ? 'http://devbootcamp.com' : 'http://stevengharms.com' %>">derp-element</a></li>
 
